--- a/_includes/notes_graph.html
+++ b/_includes/notes_graph.html
@@ -40,6 +40,7 @@
 </style>
 
 <div id="graph-wrapper">
+  <svg width="800" height="600"></svg>
   <script>
     window.addEventListener("load", loadGraph);
 
@@ -51,7 +52,7 @@
         "sha512-FHsFVKQ/T1KWJDGSbrUhTJyS1ph3eRrxI228ND0EGaEp6v4a/vGwPWd3Dtd/+9cI7ccofZvl/wulICEurHN1pg==";
     document.body.appendChild(oScript);
     oScript.onload = () => {
-        const GRAPH_DEPTH = 2; // Depth of neighbors to show
+        const GRAPH_DEPTH = 3; // Depth of neighbors to show
         const MINIMAL_NODE_SIZE = 8;
         const MAX_NODE_SIZE = 12;
         const STROKE = 1;
@@ -68,7 +69,7 @@
             const relevantLinks = [];
             
             // Find current node
-            const rootNode = allNodes.find((node) => isCurrentPath(node.path));
+            const rootNode = allNodes.find((node) => window.location.pathname.includes(node.path));
             if (!rootNode) return { nodes: [], links: [] };
 
             // BFS to get nodes up to the desired depth
