--- a/_includes/head.html
+++ b/_includes/head.html
@@ -54,13 +54,15 @@
   {% endif %}
 
   <!-- Sets the title of the page -->
+  {% comment %}
+    If the page is the home page, display only the site title
+  {% endcomment %}
   <title>
-    <!-- If the page is the home page, display only the site title -->
-    {% if page.id == "home" %}
-      {{ site.title }}
+    {% if page.id == "home" or page.url == "/" %}
+      {{ site.title | escape }}
     <!-- For other pages, display the page title followed by the site title -->
     {% else %}
-      {{ page.title }} &mdash; {{ site.title }}
+      {{ page.title | escape }} - {{ site.title | escape}}
     {% endif %}
   </title>
 </head>
