--- a/_sass/_code.scss
+++ b/_sass/_code.scss
@@ -1,5 +1,6 @@
 .highlight  {
-  background: #f8f8f8;
+  background: black;
+  color: white;
   padding: 1px 1em;
   border-radius: 3px;
   font-size: 1em;
